--- a/CommEffPivot/Base.lproj/Main.storyboard
+++ b/CommEffPivot/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                 <rect key="frame" x="51" y="351" width="211" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1647058874" green="0.5176470876" blue="0.97254908080000002" alpha="1" colorSpace="deviceRGB"/>
-                                <color key="tintColor" patternImage="4E299AF9-C7C8-4BB5-AC9C-C7B99DD7C0CB" colorSpace="pattern"/>
+                                <color key="tintColor" patternImage="1E17D258-138D-467A-AF4D-2782979DB20C" colorSpace="pattern"/>
                                 <size key="titleShadowOffset" width="7" height="7"/>
                                 <state key="normal" title="Sign In">
                                     <color key="titleColor" red="0.99215692280000001" green="0.99215692280000001" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
@@ -508,6 +508,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="textFieldDoneEditing:" destination="rA2-Up-CkA" eventType="editingDidEnd" id="unC-C4-DOY"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PcJ-zq-T5n">
                                 <rect key="frame" x="244" y="440" width="46" height="30"/>
@@ -515,6 +518,9 @@
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="sendButtonPressed:" destination="rA2-Up-CkA" eventType="touchUpInside" id="3RV-l2-83p"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="XEV-zW-xdg">
                                 <rect key="frame" x="0.0" y="48" width="320" height="394"/>
@@ -556,7 +562,6 @@
                     </view>
                     <tabBarItem key="tabBarItem" tag="1" title="Comment" image="presentation 2.png" id="BI2-tf-EAo"/>
                     <connections>
-                        <outlet property="messageCell" destination="9xW-Bo-e7m" id="6en-UM-oQ5"/>
                         <outlet property="tableview" destination="XEV-zW-xdg" id="T9i-2V-OOH"/>
                         <outlet property="textfield" destination="jP0-mc-CUR" id="8hK-BC-IvU"/>
                     </connections>
@@ -594,7 +599,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="4E299AF9-C7C8-4BB5-AC9C-C7B99DD7C0CB" width="256" height="256">
+        <image name="1E17D258-138D-467A-AF4D-2782979DB20C" width="256" height="256">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
